Add test content for http server
Add test content installed in /usr/share/armadito/web

--- a/core/tests/Makefile.am
+++ b/core/tests/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS=web
+
 AUTOMAKE_OPTIONS=subdir-objects no-dependencies
 
 check_PROGRAMS=testarmadito1 testarmaditoscan1 testxmlreport1 testconfparser1 testipcreceive1 testipcsend1 testdir1 testjsonprint1 testconf1
