--- a/core/linux/tools/Makefile.am
+++ b/core/linux/tools/Makefile.am
@@ -4,8 +4,8 @@ AM_CPPFLAGS= -I$(top_srcdir)/libarmadito/include/config
 
 bin_PROGRAMS=armadito-scan
 
-AM_CFLAGS= @LIBCURL_CFLAGS@ @LIBJSONC_CFLAGS@
-LIBS=@LIBCURL_LIBS@ @LIBJSONC_LIBS@
+AM_CFLAGS= @LIBCURL_CFLAGS@ @LIBJSONC_CFLAGS@ @GLIB2_CFLAGS@
+LIBS=@LIBCURL_LIBS@ @LIBJSONC_LIBS@ @GLIB2_LIBS@
 
 armadito_scan_SOURCES=\
 armadito-scan.c \
