Add implementation of /api/status
Add server and client implementation of status retrieving via REST api

--- a/core/linux/tools/Makefile.am
+++ b/core/linux/tools/Makefile.am
@@ -2,13 +2,17 @@ AUTOMAKE_OPTIONS=subdir-objects no-dependencies
 
 AM_CPPFLAGS= -I$(top_srcdir)/libarmadito/include/config
 
-bin_PROGRAMS=armadito-scan
+bin_PROGRAMS=armadito-scan armadito-info
 
 AM_CFLAGS= @LIBCURL_CFLAGS@ @LIBJSONC_CFLAGS@ @GLIB2_CFLAGS@
 LIBS=@LIBCURL_LIBS@ @LIBJSONC_LIBS@ @GLIB2_LIBS@
 
 armadito_scan_SOURCES=\
 armadito-scan.c \
+apiclient.c
+
+armadito_info_SOURCES=\
+armadito-info.c \
 apiclient.c
 
 #armadito_info_SOURCES=\
