Add implementation of armadito-info
Implementation of 'armadito-info' using REST API is equivalent to old implementation

--- a/core/linux/tools/Makefile.am
+++ b/core/linux/tools/Makefile.am
@@ -7,18 +7,8 @@ bin_PROGRAMS=armadito-scan armadito-info
 AM_CFLAGS= @LIBCURL_CFLAGS@ @LIBJSONC_CFLAGS@ @GLIB2_CFLAGS@
 LIBS=@LIBCURL_LIBS@ @LIBJSONC_LIBS@ @GLIB2_LIBS@
 
-armadito_scan_SOURCES=\
-armadito-scan.c \
-apiclient.c
+COMMON_SOURCES= apiclient.c apiclient.h jutil.c jutil.h
 
-armadito_info_SOURCES=\
-armadito-info.c \
-apiclient.c
+armadito_scan_SOURCES= armadito-scan.c $(COMMON_SOURCES)
 
-#armadito_info_SOURCES=\
-#armadito-info.c \
-#../daemon/ipc.c \
-#../daemon/ipc.h \
-#../net/netdefaults.h \
-#../net/unixsockclient.c \
-#../net/unixsockclient.h
+armadito_info_SOURCES= armadito-info.c $(COMMON_SOURCES)
