Add on-demand scan of removable media When removable media is mounted, if autoscan-removable-media configuration variable is set, then the media will be scanned with the default on-demand configuration.

--- a/core/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/core/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -15,6 +15,11 @@ enable-permission=1
 # if 1, removable media mount points will be added on the fly to the monitoring list
 enable-removable-media=1
 
+# autoscan removable media
+# if 1, removable media will be scanned entirely when mounted
+# this option can in theory be used at the same time as enable-removable-media
+autoscan-removable-media=0
+
 # monitored mount points
 # file access inside these mount points will be monitored
 mount="/home"
