Add cd core to travis-ci before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 
 before_install:
   - sudo apt-get install libtool libglib2.0-dev libmagic-dev libxml2-dev libjson-c-dev libmicrohttpd-dev libcurl4-openssl-dev
+  - cd core
 
 compiler:
   - gcc
