Test compilation after sources reorg

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
+*.zip
+*~
+BUILD/
+INSTALL
 Makefile
 Makefile.in
+aclocal.m4
 autom4te.cache/*
-BUILD/
+build/linux/out/*
+build/windows/VS12/include
+build/windows/VS12/lib
+build/windows/deps
 compile
+config.guess
 config.log
 config.status
-configure
-aclocal.m4
-config.guess
 config.sub
+configure
 depcomp
 install-sh
 ltmain.sh
 missing
-*~
-*.zip
-build/linux/out/*
-build/windows/deps
-build/windows/VS12/include
-build/windows/VS12/lib
