--- a/libarmadito/Makefile.am
+++ b/libarmadito/Makefile.am
@@ -1,6 +1,3 @@
-if COND_DOC
-OPT_DOC_DIR=doc
-endif
+SUBDIRS=include pkgconfig src
 
-SUBDIRS=conf include pkgconfig src # $(OPT_DOC_DIR) src tests
 
