Move command line tools directory to toplevel

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ if COND_MAN
 OPT_MAN_DIR=man
 endif
 
-SUBDIRS=conf libarmadito arch tests $(OPT_MAN_DIR)
+SUBDIRS=conf libarmadito arch tools tests $(OPT_MAN_DIR)
 
 TAGDIRS=\
 $(top_srcdir)/arch \
@@ -10,6 +10,7 @@ $(top_srcdir)/conf \
 $(top_srcdir)/json \
 $(top_srcdir)/libarmadito \
 $(top_srcdir)/man \
+$(top_srcdir)/tools \
 $(top_srcdir)/tests 
 
 TAGS:
