Start libarmadito reorganisation Only one .c file moved (log.c) Compiles ok

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,12 +2,13 @@ if COND_MAN
 OPT_MAN_DIR=man
 endif
 
-SUBDIRS=conf libarmadito arch tools tests $(OPT_MAN_DIR)
+SUBDIRS=conf lib $(OPT_MAN_DIR) # libarmadito arch tools tests
 
 TAGDIRS=\
 $(top_srcdir)/arch \
 $(top_srcdir)/conf \
 $(top_srcdir)/json \
+$(top_srcdir)/lib \
 $(top_srcdir)/libarmadito \
 $(top_srcdir)/man \
 $(top_srcdir)/tools \
