--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,6 @@
-# must be unique in a given SonarQube instance
-sonar.cfamily.build-wrapper-output.bypass=true
 sonar.projectKey=armadito:core
 sonar.projectName=armadito-core
 sonar.projectVersion=1.0
 sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.exclusions=cov-int/**/*
+sonar.cfamily.build-wrapper-output=build-wrapper-out
