Add missing libjansson libs to dependencies in travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ addons:
     - libjson-c-dev
     - libmicrohttpd-dev
     - libcurl4-openssl-dev
+    - libjansson-dev
+    - libjansson4
   coverity_scan:
     project:
       name: "armadito/armadito-av"
